# iso13485-deep-learning

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  index.html  pyproject.toml  quick_query.py  requirements.txt  setup_db.py
agents/: charter_auditor.py  eligibility.py  final_auditor.py  llm_client.py  rank_matcher.py  recommender.py  risk_classifier.py  strategy_generator.py  student_profile.py
agents/rule_engine/: __init__.py  base.py  jiangsu.py  shanghai.py  zhejiang.py
config/: settings.py
data/: seed_jiangsu.py  seed_shanghai.py  seed_zhejiang.py
db/: connection.py  models.py  repository.py  schema.sql
examples/sample_prompts/: capa_review.md  code_review.md  etl_optimization.md  feature_request.md
export/: excel_report.py  html_report.py  pdf_report.py  select_tool.py
export/templates/: select_tool.html
pages/: 1_student_input.py  2_recommendations.py  3_risk_report.py  4_export.py
pipeline/: orchestrator.py
prompt_agent/: __init__.py  __main__.py  builder.py  formatter.py  framework.py  templates.py
src/iso13485_audit/: __init__.py  __main__.py  config.py  database.py  dependencies.py
src/iso13485_audit/api/: app.py
src/iso13485_audit/cli/: audit_commands.py  clause_commands.py  db_commands.py  document_commands.py  main.py  ml_commands.py  report_commands.py
src/iso13485_audit/ml_validation/: __init__.py  bias_detection.py  data_integrity.py  model_lifecycle.py  samd_classifier.py
src/iso13485_audit/models/: __init__.py  audits.py  base.py  clauses.py  documents.py  findings.py  ml_audit.py  users.py
src/iso13485_audit/nlp/: __init__.py  document_analyzer.py  engine.py  gap_detector.py  (+1 more)
tests/: conftest.py  test_eligibility.py  test_models.py  test_pipeline.py  test_rank_matcher.py  test_rule_engine.py
tests/e2e/: test_audit_workflow.py
tests/integration/: test_api.py
tests/unit/: test_audit_service.py  test_bias_detection.py  test_capa_service.py  test_clause_service.py  test_gap_detector.py  test_samd_classifier.py
(+38 files in other folders)
