[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iso13485-audit"
version = "0.1.0"
description = "ISO 13485:2016 audit management system with an AI/ML medical-device (SaMD) audit module"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "iso13485-deep-learning" }]
keywords = ["iso13485", "audit", "qms", "medical-device", "samd", "fda", "compliance"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "typer>=0.9",
    "rich>=13.0",
    "jinja2>=3.1",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "python-multipart>=0.0.9",
    "httpx>=0.26",
]

[project.optional-dependencies]
# Heavy, optional NLP upgrade. The core ships with a deterministic TF-IDF backend
# that needs no model downloads; install this extra to enable transformer embeddings.
nlp = [
    "sentence-transformers>=2.3",
    "torch>=2.0",
]
# Optional document parsing (PDF / DOCX). Plain-text always works without these.
docs = [
    "pypdf>=4.0",
    "python-docx>=1.1",
]
# Optional PDF report rendering. HTML reports always work without this.
pdf = [
    "weasyprint>=60",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
iso13485 = "iso13485_audit.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iso13485_audit = ["seed_data/*.json", "reports/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses function calls in argument defaults (Depends)
